testsuite/tests/rename/should_fail/T25901_imp_hq_fail_5.stderr
T25901_imp_hq_fail_5.hs:8:6: error: [GHC-76037]
    Not in scope: type constructor or class ‘Proxy’
    Suggested fix:
      Perhaps use one of these:
        ‘T.Proxy’ (imported from Data.Proxy),
        ‘T.KProxy’ (imported from Data.Proxy)

